# ML-template

./: .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
conf/: config.yaml
conf/callbacks/: default.yaml
conf/experiment/: exp001.yaml
conf/logger/: wandb.yaml
conf/model/: resnet.yaml  vit.yaml
conf/trainer/: default.yaml
docker/: dev.Dockerfile
src/: train.py
src/data/: datamodule.py
src/models/: classifier.py
